# sittly-launcher

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  init.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/events/: app.rs  clipboard.rs  cmd.rs  files.rs  mod.rs  music.rs
src/@devtools/: README.md  build.js  package.json  pnpm-lock.yaml  register.ts  tsconfig.json
src/@devtools/api/: music.ts  notifications.ts  shell.ts
src/@devtools/components/: badge.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  fieldset.tsx  input.tsx  own_command.tsx  radio.tsx  slider.tsx  switch.tsx
src/@devtools/hooks/: context.ts  localStorage.ts  router.ts
src/@devtools/types/: index.ts
src/config/: index.ts
src/devtools/: build.js  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/devtools/api/: app.ts  clipboard.ts  database.ts  files.ts  indicators.ts  network.ts  path.ts  shell.ts  system.ts
src/devtools/components/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  fieldset.tsx  input.tsx  layout.tsx  own_command.tsx  radio.tsx  select.tsx  skeletons.tsx  slider.tsx  switch.tsx  table.tsx  textarea.tsx
src/devtools/hooks/: context.tsx  router.ts
src/devtools/lib/: custom-events.ts  utils.ts
src/devtools/types/: events.ts  index.ts  models.ts
src/extensions/: base.ts  emojis.tsx  extension-assembly.ts  index.ts  music.tsx
src/extensions/emojis/: items.tsx  pages.tsx
src/extensions/extension-viewer/: pages.tsx
src/extensions/find-files/: page.tsx
src/extensions/low-level-interaction/: items.tsx
src/extensions/music/: items.tsx
src/extensions/navigation/: context.tsx  no-results.tsx
src/extensions/store/: page.tsx
src/extensions/todoist/: const.tsx  create.tsx  mapper.tsx  page.tsx  use-todoist.tsx
src/extensions/ui-example/: pages.tsx
src/lib/: utils.ts
src/modes/: Music.tsx
src/services/: clipboard.ts  context.tsx  index.ts  music.ts  router.ts
src/types/: extension.ts  extensions.ts  typings.d.ts  window.d.ts
src/ui/: Command.tsx  Footer.tsx  Kbd.tsx  MainActivity.tsx
src/ui/shadcn/: command.tsx
src/ui/shadcn/ui/: badge.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  fieldset.tsx  input.tsx  own_command.tsx  radio.tsx  slider.tsx  switch.tsx
