[package]
name = "sittly"
version = "0.0.0-alpha.1"
description = "Sittly launcher."
authors = ["Julian Kominovic"]
license = ""
repository = "https://github.com/JulianKominovic/sittly-launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "window-all", "http-all", "dialog-all", "fs-remove-dir", "fs-read-dir", "fs-write-file", "fs-create-dir", "fs-read-file", "clipboard-all", "global-shortcut-all", "notification-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1.26.0", features = ["time"] }
ansi-to-html = "0.1.3"
clap_complete = "4.3.1"
playerctl = "0.1.0"
dbus = "0.9.7"
pathdiff = "0.2.1"
wallpaper = "3.2.0"
shell-words = "1.1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
