[package]
name = "sittly"
version = "0.0.0-alpha.1"
description = "Sittly launcher."
authors = ["Julian Kominovic"]
license = ""
repository = "https://github.com/JulianKominovic/sittly-launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "window-all", "http-all", "dialog-all", "fs-remove-dir", "fs-read-dir", "fs-write-file", "fs-create-dir", "fs-read-file", "clipboard-all", "global-shortcut-all", "notification-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["time"] }
playerctl = "0.1.0"
wallpaper = "3.2.0"
rust_search = "2.1.0"
base64 = "0.21.3"
jammdb = "0.10.0"


[features]
custom-protocol = ["tauri/custom-protocol"]
